crates/nexus-store/tests/compile_fail/builder_skip_version.stderr
error[E0599]: no method named `event_type` found for struct `WithStreamId` in the current scope
 --> tests/compile_fail/builder_skip_version.rs:4:43
  |
4 |     let _ = pending_envelope("s1".into()).event_type("E");
  |                                           ^^^^^^^^^^ method not found in `WithStreamId`
